# SRE-Incident-Openenv

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  baseline.py  grader.py  graders.py  hackathon.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yml
api/: __init__.py  server.py
env/: __init__.py  baseline_runner.py  environment.py  incidents.py  models.py  services.py
frontend/: app.js  index.html  styles.css
graders/: __init__.py  base.py  easy_grader.py  hard_grader.py  medium_grader.py
scripts/: benchmark_regression_check.py  submission_check.py
server/: __init__.py  app.py
tests/: test_api.py  test_environment.py
