[project]
name = "sre-incident-env"
version = "0.1.0"
description = "OpenEnv-compatible SRE incident response simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "httpx",
  "openenv-core>=0.2.0",
  "openai",
  "pydantic",
  "uvicorn",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "env*", "graders*", "server*"]
